--- a/index.html
+++ b/index.html
@@ -43,16 +43,22 @@
                 </div>
                 <div class="search-menu--content">
                     <input class="search-menu--content-input"
-                        placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" />
+                        placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" id="input-buscar" />
                     <button class="search-menu--content-button"><img src="./assets/lupa_inactive.svg"
                             class="search-menu--content-button-lupa">Buscar</button>
                 </div>
             </div>
-            <div class="menu-sugerencia">
-                <div class="menu-sugerencia--title">
+            <div class="menu-sugerencias">
+                <div class="menu-sugerencias--title">
                     Hoy te sugerimos:
                 </div>
-                <div class="menu-sugerencia--cards-wrapper" id="sugerencias-card-wrapper"></div>
+                <div class="menu-sugerencias--cards-wrapper" id="sugerencias-card-wrapper"></div>
+            </div>
+            <div class="menu-tendencias">
+                <div class="menu-tendencias--title">
+                    Tendencias:
+                </div>
+                <div class="menu-tendencias--cards-wrapper" id="tendencias-card-wrapper"></div>
             </div>
         </div>
     </div>
