agregador para mostrar en el curso

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <button class="search-menu--content-button"><img src="./assets/lupa_inactive.svg"
                             class="search-menu--content-button-lupa">Buscar</button>
                 </div>
+                <div></div>
             </div>
             <div class="menu-sugerencias">
                 <div class="menu-sugerencias--title">
